--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         .hero h1 {
-            font-size: 3rem;
+            font-size: 3rem; color: rgba(199, 126, 18, 0.637)
         }
 
         .content-section {
@@ -122,53 +122,99 @@
 
     <!-- Hero Section -->
     <div class="hero text-center fade-in">
-        <h1>Inovasi dalam Pengelolaan Lalat Buah: Memperkuat Pertanian Salak di Kabupaten Banjarnegara</h1>
+        <h1>Inovasi Pengendalian Lalat Buah untuk Salak Banjarnegara</h1>
     </div>
 
-    <!-- Content Section -->
-    <div class="container content-section" id="article">
-        <h2 class="section-title">Pendahuluan</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <p>Salak, atau sering disebut sebagai "snake fruit" karena kulitnya yang bersisik, merupakan salah satu komoditas unggulan yang banyak dibudidayakan di Kabupaten Banjarnegara. Namun, budidaya salak seringkali terkendala oleh serangan Organisme Pengganggu Tumbuhan (OPT), salah satunya adalah lalat buah.</p>
-                <p>Serangan lalat buah dapat menurunkan kualitas hasil panen dan menyebabkan kerugian ekonomi yang signifikan. Oleh karena itu, metode pengelolaan yang lebih berkelanjutan dan ramah lingkungan diperlukan untuk menanggulangi hama ini.</p>
+<!-- Content Section -->
+<div class="container content-section" id="article">
+    <h2 class="section-title">Pendahuluan</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <!-- Image with Text Wrapping (Floated to the Right) and Additional Styling -->
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+               
+                <strong>Pengelolaan Lalat Buah dengan Pendekatan Area-Wide Management (AWM)</strong><br>
+                Lalat buah <i>(Bactrocera spp.)</i> merupakan salah satu Organisme Pengganggu Tumbuhan (OPT) utama yang dapat menurunkan kualitas dan kuantitas hasil panen salak di Kabupaten Banjarnegara. Serangan lalat buah tidak hanya menyebabkan kerusakan pada buah, tetapi juga menimbulkan kerugian ekonomi yang signifikan bagi para petani. Oleh karena itu, diperlukan metode pengendalian yang efektif dan ramah lingkungan untuk menekan populasi hama ini.
+            </p>
+
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Salah satu metode pengendalian yang terbukti efektif adalah penerapan <b>Area-Wide Management (AWM)</b>. Teknologi AWM mengintegrasikan beberapa teknik pengendalian, seperti:
+            </p>
+            <ul style="padding: 10px 40px;">
+                <li style="margin-bottom: 10px;"><strong>Pemasangan Perangkap Methyl Eugenol (ME) Wooden Block</strong>: Digunakan untuk menangkap lalat jantan dan menekan populasi hama di lapangan.</li>
+                <li style="margin-bottom: 10px;"><strong>Penyemprotan Umpan Protein Beracun</strong>: Menarik lalat betina dewasa agar mengonsumsi umpan yang telah dicampur insektisida.</li>
+                <li style="margin-bottom: 10px;"><strong>Sanitasi Kebun</strong>: Membersihkan buah-buah yang jatuh dan terserang untuk mencegah berkembangnya larva menjadi lalat dewasa.</li>
+                <li style="margin-bottom: 10px;"><strong>Pemantauan Berkala dengan Steiner Trap</strong>: Memantau populasi lalat buah di lapangan sebagai dasar pengambilan keputusan pengendalian.</li>
+            </ul>
+
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Penerapan AWM dilakukan pada area dengan luasan minimal 25 hektar secara serentak dan berkesinambungan. Pendekatan ini mampu menekan populasi lalat buah hingga tingkat yang rendah, sekaligus meminimalkan penggunaan insektisida yang dapat berdampak negatif pada lingkungan.
+            </p>
+
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;"><strong>Penerapan AWM pada Tanaman Salak di Banjarnegara</strong></p>
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Untuk mengimplementasikan teknologi AWM pada tanaman salak di Kabupaten Banjarnegara, diperlukan pemahaman dan keterampilan teknis dari para petani serta dukungan dari para pemangku kepentingan. Direktorat Perlindungan Hortikultura, bersama dengan Direktorat Buah dan Florikultura, telah menyelenggarakan kegiatan bimbingan teknis dan sosialisasi terkait penerapan AWM pada komoditas salak.
+            </p>
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Kegiatan ini bertujuan untuk meningkatkan pengetahuan dan keterampilan petani dalam mengelola lalat buah, sehingga hasil panen salak dapat meningkat baik dari segi kuantitas maupun kualitas. Dengan dukungan yang berkelanjutan dari semua pihak yang terlibat, diharapkan penerapan AWM dapat dilakukan secara optimal, menghasilkan produksi salak yang berkualitas tinggi, serta memberikan peningkatan pendapatan yang signifikan bagi para petani.
+            </p>
+
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;"><strong>Pentingnya Penerapan AWM untuk Meningkatkan Produktivitas Salak</strong></p>
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Budidaya salak di Kabupaten Banjarnegara memiliki kontribusi yang signifikan terhadap perekonomian lokal, baik untuk pasar domestik maupun potensi ekspor. Namun, keberhasilan budidaya ini sangat dipengaruhi oleh gangguan OPT, khususnya serangan lalat buah. Dengan penerapan teknologi AWM yang terencana dan berkesinambungan, diharapkan para petani dapat mencapai hasil panen yang optimal serta menjaga kualitas buah salak yang dihasilkan.
+            </p>
+            <p style="text-align: justify; line-height: 1.6; padding: 10px 20px;">
+                Penerapan teknologi AWM pada salak tidak hanya menekan populasi lalat buah, tetapi juga berperan dalam meningkatkan daya saing produk hortikultura lokal, yang pada akhirnya akan berdampak positif pada peningkatan kesejahteraan petani dan perkembangan ekonomi daerah.
+            </p>
+        </div>
+    </div>
+</div>
+
+
+   <!-- Techniques Section with Cards -->
+<div class="container content-section" id="techniques">
+    <h2 class="section-title">Teknik Pengelolaan Lalat Buah</h2>
+    <div class="row">
+        <!-- Column 1 -->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Sanitasi Kebun</h5>
+                    <p class="card-text">Sanitasi kebun merupakan langkah awal yang penting dalam pengendalian lalat buah. Pemangkasan dilakukan secara rutin pada bagian tanaman yang sudah tua, sakit, atau rusak. Hal ini bertujuan untuk mengurangi tempat persembunyian lalat buah dan sumber makanan bagi larva. Selain itu, pembersihan buah jatuh juga perlu dilakukan secara teratur. Buah yang jatuh atau busuk sering menjadi tempat berkembang biak lalat buah, sehingga harus segera dikumpulkan dan dibuang. Pengelolaan gulma pun tidak kalah penting. Dengan menjaga kebersihan sekitar kebun dan mencabuti gulma secara berkala, potensi gulma menjadi inang alternatif bagi lalat buah dapat ditekan.</p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <img src="images/Salak.jpg" alt="Salak Fruit" class="img-fluid rounded">
+        </div>
+        <!-- Column 2 -->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Pemasangan ME Wooden Blok</h5>
+                    <p class="card-text">Perangkap Methyl Eugenol (ME) adalah salah satu metode yang efektif untuk mengendalikan populasi lalat buah jantan. Pemasangan ME Wooden Blok dilakukan di lokasi strategis dalam kebun, seperti di area yang sering dilalui lalat buah. Penggunaan ME Wooden Blok ini harus disertai dengan penggantian cairan atau blok ME secara berkala sesuai petunjuk penggunaan agar tetap efektif. Blok ini bekerja dengan memancarkan aroma khas yang menarik lalat buah jantan, sehingga mereka terjebak di perangkap. Dengan demikian, jumlah lalat buah jantan yang dapat membuahi lalat betina akan berkurang, sehingga menekan perkembangan populasi secara keseluruhan.</p>
+                </div>
             </div>
         </div>
     </div>
-
-    <!-- Techniques Section with Cards -->
-    <div class="container content-section" id="techniques">
-        <h2 class="section-title">Teknik Pengelolaan Lalat Buah</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Sanitasi Kebun</h5>
-                        <p class="card-text">Kebersihan kebun penting untuk memutus siklus hidup lalat buah. Buah yang jatuh harus dimusnahkan.</p>
-                    </div>
+    <div class="row mt-4">
+        <!-- Column 3 -->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Penggunaan Umpan Protein Beracun</h5>
+                    <p class="card-text">Penggunaan umpan protein adalah langkah lain yang dapat diterapkan. Formulasinya mencampurkan protein hidrolisat dengan insektisida yang aman bagi musuh alami. Umpan ini disemprotkan pada tanaman secara berkala. Sasaran dari umpan protein ini adalah lalat buah betina yang tertarik untuk makan dan bertelur, namun insektisida yang terkandung di dalamnya akan membunuh lalat betina tersebut.</p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pemasangan Methyl Eugenol</h5>
-                        <p class="card-text">Atraktan yang sangat efektif dalam menarik lalat buah jantan sehingga menurunkan populasi lalat.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Penggunaan Umpan Protein Beracun</h5>
-                        <p class="card-text">Menggunakan umpan protein untuk menangkap lalat buah betina sebelum mereka bertelur di buah salak.</p>
-                    </div>
+        </div>
+        <!-- Column 4 -->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Pemantauan Populasi</h5>
+                    <p class="card-text">Pemantauan populasi lalat buah juga perlu dilakukan secara berkala. Perangkap seperti perangkap Steiner bisa digunakan untuk memantau populasi lalat buah. Selain itu, pengamatan visual secara rutin terhadap buah juga penting untuk melihat tanda-tanda serangan lalat buah, sehingga pengendalian dapat dilakukan secara tepat dan efisien.</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
     <!-- Map Section -->
     <div class="container content-section" id="map">
